finalize layout for page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <div class="container">
     <header>
-      <h1>Song Generator</h1>
+      <h1>Mom's Mix</h1>
+      <p>A fun way to find a new song or two...</p>
     </header>
 
     <button onclick="selectPerson('adam')">Adam</button>
