--- a/results.html
+++ b/results.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <header>
-      <h1>Your Song Recommendation</h1>
+      <h1>I Chose...</h1>
     </header>
 
     <div id="songResult">
