--- a/results.html
+++ b/results.html
@@ -14,7 +14,6 @@
     </header>
 
     <div id="songResult">
-      <!-- Default content before song recommendation is fetched -->
       <div id="loadingMessage">
         <p>Loading your song recommendation...</p>
       </div>
@@ -35,36 +34,29 @@
   <script src="script.js"></script>
 
   <script>
-    // Get the selected person and song type from localStorage
     const selectedPerson = localStorage.getItem('selectedPerson');
     const musicType = localStorage.getItem('musicType');
 
-    // Check if there's a valid person and music type
     if (!selectedPerson || !musicType) {
       document.getElementById('songResult').innerHTML = '<p>No selection made. Please go back and choose a person and music type.</p>';
     } else {
-      // Select the person and get their song database
       const personDatabase = personDatabases[selectedPerson];
 
       if (!personDatabase || !personDatabase[musicType]) {
         document.getElementById('songResult').innerHTML = '<p>No song recommendations found for this person and music type.</p>';
       } else {
-        // Get a random song from the selected category
         const song = getRandomSong(personDatabase[musicType]);
 
-        // Update the HTML elements with the selected song data
-        document.getElementById('albumCover').src = song.albumCover;  // Album cover image
-        document.getElementById('title').textContent = song.title;  // Song title
-        document.getElementById('artist').textContent = song.artist;  // Artist name
-        document.getElementById('playNowButton').href = song.link;  // Play Now link
+        document.getElementById('albumCover').src = song.albumCover;
+        document.getElementById('title').textContent = song.title;
+        document.getElementById('artist').textContent = song.artist;
+        document.getElementById('playNowButton').href = song.link;
 
-        // Hide loading message and show result container
         document.getElementById('loadingMessage').style.display = 'none';
         document.getElementById('resultContainer').style.display = 'block';
       }
     }
 
-    // Function to select a random song from the list
     function getRandomSong(songCategory) {
       const randomIndex = Math.floor(Math.random() * songCategory.length);
       return songCategory[randomIndex];
