--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <div class="container">
     <header>
       <h1>Mom's Mix</h1>
-      <p>A fun way to find a new song or two...</p>
+      <h2>A fun way to find a new song or two...</h2>
     </header>
 
     <button onclick="selectPerson('adam')">Adam</button>
     <button onclick="selectPerson('julia')">Julia</button>
     <button onclick="selectPerson('luke')">Luke</button>
     <button onclick="selectPerson('ian')">Ian</button>
+    <header class="">
+      <p>It can be hard to find new music, let us do the hard work for you. Whenever you feel like your rotation is getting a little bland, get a personalized suggestion from your favorite human beings (ofc). Happy Listening!</p>
+    </header>
   </div>
 
   <script>
