--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button onclick="selectPerson('julia')">Julia</button>
     <button onclick="selectPerson('luke')">Luke</button>
     <button onclick="selectPerson('ian')">Ian</button>
-    <header class="">
+    <header class="container">
       <p>It can be hard to find new music, let us do the hard work for you. Whenever you feel like your rotation is getting a little bland, get a personalized suggestion from your favorite human beings (ofc). Happy Listening!</p>
     </header>
   </div>
