--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <body>
 
   <div class="container">
-    <header>
+    <section>
       <h1>Mom's Mix</h1>
       <h2>A fun way to find a new song or two...</h2>
-    </header>
+    </section>
 
     <button onclick="selectPerson('adam')">Adam</button>
     <button onclick="selectPerson('julia')">Julia</button>
     <button onclick="selectPerson('luke')">Luke</button>
     <button onclick="selectPerson('ian')">Ian</button>
-    <header class="container">
+    <section>
       <p>It can be hard to find new music, let us do the hard work for you. Whenever you feel like your rotation is getting a little bland, get a personalized suggestion from your favorite human beings (ofc). Happy Listening!</p>
-    </header>
+    </section>
+    <button onclick="">Full Playlist</button>
+    <img src="images/family.HEIC" alt="Music Image" class="image">
   </div>
 
   <script>
