--- a/results.html
+++ b/results.html
@@ -20,7 +20,7 @@
 
       <div id="resultContainer" style="display:none;">
         <div class="song-result">
-          <img id="albumCover" src="images/family.HEIC" alt="Album Cover" class="album-cover">
+          <img id="albumCover" src="" alt="Album Cover" class="album-cover">
           <h2 id="title"></h2>
           <p id="artist"></p>
           <a id="playNowButton" href="" target="_blank">Play Now</a>
