--- a/type.html
+++ b/type.html
@@ -23,7 +23,7 @@
     <button onclick="getRecommendation()">Get Recommendation</button>
 
     <button onclick="window.location.href = 'index.html';">Home</button>
-    <img id="albumCover" src="images/family.HEIC" alt="Album Cover" class="album-cover">
+    <img id="family" src="images/family.HEIC" alt="Album Cover" class="img">
   </div>
 
   <script>
