add image of lucy

--- a/results.html
+++ b/results.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Song Recommendation Result</title>
+  <title>Mom's Mix</title>
+  <link rel="icon" href="images/lucy.jpeg" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
