--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2>A fun way to find a new song or two...</h2>
     </section>
 
-    <button onclick="selectPerson('adam')">Adam</button>
+    <button onclick="selectPerson('dad')">Dad</button>
     <button onclick="selectPerson('julia')">Julia</button>
     <button onclick="selectPerson('luke')">Luke</button>
     <button onclick="selectPerson('ian')">Ian</button>
