--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
       <p>It can be hard to find new music, let us do the hard work for you. Whenever you feel like your rotation is getting a little bland, get a personalized suggestion from your favorite human beings (ofc). Happy Listening!</p>
     </section>
-    <button onclick="">Full Playlist</button>
+    <button href="https://open.spotify.com/playlist/5PnH2204gGadEsWORRtaVH?si=6e6c15b904724f40">Full Playlist</button>
   </div>
 
   <script>
