--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <header>
-      <h1>I Chose...</h1>
+      <h1>I Choose...</h1>
     </header>
 
     <div id="songResult">
